remove all cached uploads
Former-commit-id: 845c3edf67d4d8dac5cfbbaac706fc756b9e2355

--- a/protyping/auto-segmentation/sb/23-compress-zenodo-stream.ipynb
+++ b/protyping/auto-segmentation/sb/23-compress-zenodo-stream.ipynb
@@ -10,6 +10,7 @@
     "import json\n",
     "import shutil\n",
     "import random\n",
+    "import zipfile\n",
     "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -43,6 +44,59 @@
     "import pymedphys\n",
     "from pymedphys.labs.autosegmentation import pipeline, filtering, indexing, mask, tfrecord\n",
     "from pymedphys._data import zenodo, download"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "record_name = \"auto-segmentation-eye-lens-patient-npz\"\n",
+    "\n",
+    "paths = pymedphys.zenodo_data_paths(record_name)\n",
+    "\n",
+    "npz_paths = [path for path in paths if path.suffix == \".npz\"]\n",
+    "# npz_paths"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for path in npz_paths:\n",
+    "    with zipfile.ZipFile(path.with_suffix('.zip'), 'w', compression=zipfile.ZIP_LZMA) as z:\n",
+    "        z.write(path, arcname=path.name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "npz_paths = list(pathlib.Path.home().joinpath('.data', 'dicom-ct-and-structures', 'npz_cache').glob('*1.2.840.113704.1.111.3880*.npz'))\n",
+    "npz_paths"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for path in npz_paths:\n",
+    "    with zipfile.ZipFile(path.with_suffix('.zip'), 'w', compression=zipfile.ZIP_LZMA) as z:\n",
+    "        z.write(path, arcname=path.name)"
    ]
   },
   {
