--- a/protyping/auto-segmentation/sb/24-stream-compressed-dataset-from-zenodo.ipynb
+++ b/protyping/auto-segmentation/sb/24-stream-compressed-dataset-from-zenodo.ipynb
@@ -56,16 +56,24 @@
     "):\n",
     "    npz_download_directory = download.get_data_dir().joinpath(record_name)\n",
     "    npz_paths = {\n",
-    "        ct_uid: npz_download_directory.joinpath(f'{ct_uid}.npz')\n",
+    "        ct_uid: npz_download_directory.joinpath(ct_uid, f'{ct_uid}.npz')\n",
     "        for ct_uid in ct_uids\n",
-    "    }       \n",
+    "    }\n",
+    "    \n",
+    "    download_zips = {\n",
+    "        ct_uid: f'{ct_uid}.zip'\n",
+    "        for ct_uid in ct_uids\n",
+    "    }\n",
     "    \n",
     "    def generator():\n",
-    "        for ct_uid, npz_path in npz_paths.items():\n",
+    "        for ct_uid in ct_uids:\n",
+    "            npz_path = npz_paths[ct_uid]\n",
+    "            download_path = download_zips[ct_uid]\n",
+    "            \n",
     "            if not npz_path.exists():\n",
     "                downloaded_path = pymedphys.zenodo_data_paths(\n",
     "                    record_name, \n",
-    "                    filenames=[npz_path.name]\n",
+    "                    filenames=[download_path]\n",
     "                )[0]\n",
     "                \n",
     "                if downloaded_path != npz_path:\n",
@@ -258,6 +266,13 @@
     "    diagnostic_plotting(x_grid, y_grid, input_array, output_array)\n",
     "    plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
