--- a/protyping/auto-segmentation/sb/25-investigate-3880.ipynb
+++ b/protyping/auto-segmentation/sb/25-investigate-3880.ipynb
@@ -7,14 +7,10 @@
    "outputs": [],
    "source": [
     "import pathlib\n",
-    "import json\n",
     "import shutil\n",
-    "import random\n",
     "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "\n",
-    "import tensorflow as tf\n",
     "\n",
     "from IPython import display\n",
     "\n",
@@ -41,8 +37,7 @@
    "outputs": [],
    "source": [
     "import pymedphys\n",
-    "from pymedphys.labs.autosegmentation import pipeline, filtering, indexing, mask, tfrecord\n",
-    "from pymedphys._data import zenodo, download"
+    "from pymedphys.labs.autosegmentation import pipeline, filtering, indexing, mask"
    ]
   },
   {
@@ -51,50 +46,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def single_dataset_from_zenodo_download(\n",
-    "    record_name, ct_uids, structures_to_learn\n",
-    "):\n",
-    "    npz_download_directory = download.get_data_dir().joinpath(record_name)\n",
-    "    npz_paths = {\n",
-    "        ct_uid: npz_download_directory.joinpath(f'{ct_uid}.npz')\n",
-    "        for ct_uid in ct_uids\n",
-    "    }       \n",
-    "    \n",
-    "    def generator():\n",
-    "        for ct_uid, npz_path in npz_paths.items():\n",
-    "            if not npz_path.exists():\n",
-    "                downloaded_path = pymedphys.zenodo_data_paths(\n",
-    "                    record_name, \n",
-    "                    filenames=[npz_path.name]\n",
-    "                )[0]\n",
-    "                \n",
-    "                if downloaded_path != npz_path:\n",
-    "                    raise ValueError(\"Expected the downloaded path to match the predicted npz_path\")\n",
-    "                    \n",
-    "            data = np.load(npz_path)\n",
-    "            x_grid = data[\"x_grid\"]\n",
-    "            y_grid = data[\"y_grid\"]\n",
-    "            input_array = data[\"input_array\"]\n",
-    "            output_array = data[\"output_array\"]\n",
-    "            \n",
-    "            input_array = input_array[:, :, None]\n",
+    "# Put all of the DICOM data within a directory called 'dicom' \n",
+    "# organised by 'training', 'validation', and 'testing' in here:\n",
+    "data_path_root = pathlib.Path.home().joinpath('.data/dicom-ct-and-structures')\n",
+    "dicom_directory = data_path_root.joinpath('dicom')\n",
     "\n",
-    "            yield ct_uid, x_grid, y_grid, input_array, output_array\n",
+    "training_directory = dicom_directory.joinpath('training')\n",
+    "validation_directory = dicom_directory.joinpath('validation')\n",
+    "testing_directory = dicom_directory.joinpath('testing')\n",
     "\n",
-    "    parameters = (\n",
-    "        (tf.string, tf.float64, tf.float64, tf.int32, tf.float64),\n",
-    "        (\n",
-    "            tf.TensorShape(()),\n",
-    "            tf.TensorShape([512]),\n",
-    "            tf.TensorShape([512]),\n",
-    "            tf.TensorShape([512, 512, 1]),\n",
-    "            tf.TensorShape([512, 512, len(structures_to_learn)]),\n",
-    "        ),\n",
-    "    )\n",
-    "\n",
-    "    dataset = tf.data.Dataset.from_generator(generator, *parameters)\n",
-    "\n",
-    "    return dataset"
+    "# Of note, the DICOM file directory structure need not have any further\n",
+    "# organisation beyond being placed somewhere within one of the three\n",
+    "# 'training', 'validation', or 'testing'. They can be organised into\n",
+    "# directories by patient but that is not a requirement."
    ]
   },
   {
@@ -103,32 +67,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def datasets_from_zenodo_download(\n",
-    "    record_name\n",
-    "):\n",
-    "    filenames_to_download = ['ct_uids_by_training_type.zip', 'structures_to_learn.zip']\n",
+    "name_mappings_path = data_path_root.joinpath('name_mappings.json')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dicom_paths = pymedphys.zenodo_data_paths(\"auto-segmentation\")\n",
     "\n",
-    "    configuration_paths = pymedphys.zenodo_data_paths(\n",
-    "        record_name, \n",
-    "        filenames=filenames_to_download)\n",
+    "for path in dicom_paths:\n",
+    "    if path.suffix == '.dcm':\n",
+    "        dataset_id = path.parent.name\n",
+    "        parent_and_file = path.parts[-2::]\n",
     "\n",
-    "    configurations = {}\n",
-    "    for path in configuration_paths:\n",
-    "        with open(path) as f:\n",
-    "            configurations[path.stem] = json.load(f)\n",
+    "        if int(dataset_id) < 4:\n",
+    "            new_path = validation_directory.joinpath(*parent_and_file)\n",
+    "        elif int(dataset_id) < 12:\n",
+    "            new_path = testing_directory.joinpath(*parent_and_file)\n",
+    "        else:\n",
+    "            new_path = training_directory.joinpath(*parent_and_file)\n",
     "\n",
-    "    ct_uids_by_training_type = configurations['ct_uids_by_training_type']\n",
-    "    structures_to_learn = configurations['structures_to_learn']\n",
-    "    \n",
-    "    datasets = {}\n",
-    "    for training_type, ct_uids in ct_uids_by_training_type.items():\n",
-    "        random.shuffle(ct_uids)\n",
+    "    elif path.name == 'name_mappings.json':\n",
+    "        new_path = name_mappings_path\n",
     "        \n",
-    "        datasets[training_type] = single_dataset_from_zenodo_download(\n",
-    "            record_name, ct_uids, structures_to_learn\n",
-    "        )\n",
+    "    else:\n",
+    "        raise ValueError(f\"Unexpected file found. {path}.\")\n",
     "        \n",
-    "    return datasets, structures_to_learn"
+    "    if not new_path.exists():\n",
+    "        new_path.parent.mkdir(parents=True, exist_ok=True)\n",
+    "        shutil.copy(path, new_path)"
    ]
   },
   {
@@ -137,8 +107,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "record_name = \"auto-segmentation-eye-lens-patient-npz\"\n",
-    "datasets, structures_to_learn = datasets_from_zenodo_download(record_name)"
+    "# The following names_map is used to standardise the structure names\n",
+    "names_map = filtering.load_names_mapping(name_mappings_path)"
    ]
   },
   {
@@ -147,7 +117,58 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "datasets"
+    "# Create masks for the following structures, in the following order\n",
+    "structures_to_learn = [\n",
+    "    'lens_left', 'lens_right', 'eye_left', 'eye_right', 'patient']\n",
+    "\n",
+    "# Use the following to filter the slices used for training, validation,\n",
+    "# and testing\n",
+    "filters = {\n",
+    "    \"study_set_must_have_all_of\": structures_to_learn,\n",
+    "    \"slice_at_least_one_of\": [\n",
+    "        'lens_left', 'lens_right', 'eye_left', 'eye_right'\n",
+    "    ],\n",
+    "    \"slice_must_have\": ['patient'],\n",
+    "    \"slice_cannot_have\": []\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "datasets = pipeline.create_datasets(\n",
+    "    data_path_root, names_map, structures_to_learn, filters)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(\n",
+    "    ct_image_paths,\n",
+    "    structure_set_paths,\n",
+    "    ct_uid_to_structure_uid,\n",
+    "    structure_uid_to_ct_uids,\n",
+    ") = indexing.get_uid_cache(data_path_root)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(\n",
+    "    structure_names_by_ct_uid,\n",
+    "    structure_names_by_structure_set_uid,\n",
+    ") = indexing.get_cached_structure_names_by_uids(\n",
+    "    data_path_root, structure_set_paths, names_map\n",
+    ")"
    ]
   },
   {
@@ -214,15 +235,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def display_paths(ct_uid):\n",
+    "    print(ct_image_paths[ct_uid])\n",
+    "    \n",
+    "    structure_set_uid = ct_uid_to_structure_uid[ct_uid]\n",
+    "    print(structure_set_paths[structure_set_uid])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Display Results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "for (\n",
     "    ct_uid, x_grid, y_grid, input_array, output_array\n",
-    ") in datasets['training'].prefetch(30):\n",
+    ") in datasets['testing'].prefetch(30):\n",
     "    \n",
     "    ct_uid = ct_uid.numpy().decode()\n",
     "    \n",
-    "    display.display(display.Markdown(f\"## {ct_uid}\"))\n",
-    "    diagnostic_plotting(x_grid, y_grid, input_array, output_array)\n",
-    "    plt.show()"
+    "    if ct_uid.startswith('1.2.840.113704.1.111.3880'):\n",
+    "        display.display(display.Markdown(f\"## {ct_uid}\"))\n",
+    "        diagnostic_plotting(x_grid, y_grid, input_array, output_array)\n",
+    "        plt.show()\n",
+    "        display_paths(ct_uid)"
    ]
   },
   {
@@ -239,7 +282,8 @@
     "    \n",
     "    display.display(display.Markdown(f\"## {ct_uid}\"))\n",
     "    diagnostic_plotting(x_grid, y_grid, input_array, output_array)\n",
-    "    plt.show()"
+    "    plt.show()\n",
+    "    display_paths(ct_uid)"
    ]
   },
   {
@@ -250,13 +294,14 @@
    "source": [
     "for (\n",
     "    ct_uid, x_grid, y_grid, input_array, output_array\n",
-    ") in datasets['testing'].prefetch(30):\n",
+    ") in datasets['training'].prefetch(30):\n",
     "    \n",
     "    ct_uid = ct_uid.numpy().decode()\n",
     "    \n",
     "    display.display(display.Markdown(f\"## {ct_uid}\"))\n",
     "    diagnostic_plotting(x_grid, y_grid, input_array, output_array)\n",
-    "    plt.show()"
+    "    plt.show()\n",
+    "    display_paths(ct_uid)"
    ]
   }
  ],
