automatically uploading ct zip files

--- a/protyping/auto-segmentation/sb/27-update-zenodo-store.ipynb
+++ b/protyping/auto-segmentation/sb/27-update-zenodo-store.ipynb
@@ -6,16 +6,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import zipfile\n",
-    "import pathlib"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# Makes it so any changes in pymedphys is automatically\n",
     "# propagated into the notebook without needing a kernel reset.\n",
     "from IPython.lib.deepreload import reload\n",
@@ -29,7 +19,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pymedphys"
+    "from pymedphys._data import zenodo, upload"
    ]
   },
   {
@@ -38,7 +28,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dicom_paths = pymedphys.zenodo_data_paths(\"auto-segmentation\")"
+    "zenodo.get_zenodo_access_token()"
    ]
   },
   {
@@ -47,9 +37,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "prep_for_zenodo_path = pathlib.Path().home().joinpath('Documents', 'prep-for-zenodo')\n",
-    "prep_for_zenodo_path.mkdir(exist_ok=True)\n",
-    "prep_for_zenodo_path"
+    "upload.publish_deposition('3902198')"
    ]
   },
   {
@@ -57,16 +45,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "for path in dicom_paths:\n",
-    "    \n",
-    "    filename_in_zip = path.name\n",
-    "    filename_on_disk = path.with_suffix('.zip').name\n",
-    "    new_path = prep_for_zenodo_path.joinpath(filename_on_disk)\n",
-    "    \n",
-    "    with zipfile.ZipFile(new_path, 'w', compression=zipfile.ZIP_LZMA) as z:\n",
-    "        z.write(path, arcname=filename_in_zip)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
