some horrible mess

--- a/protyping/auto-segmentation/sb/030-initial-download.ipynb
+++ b/protyping/auto-segmentation/sb/030-initial-download.ipynb
@@ -97,6 +97,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "for uid, url in uid_to_url.items():\n",
     "    filename = url.split('/')[-1]\n",
@@ -106,17 +113,11 @@
     "        save_filename,\n",
     "        check_hash=True,\n",
     "        redownload_on_hash_mismatch=True,\n",
+    "        delete_when_no_hash_found=False,\n",
     "        url=url,\n",
     "        hash_filepath=hash_path\n",
     "    )"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
