--- a/protyping/auto-segmentation/sb/031-download-cache-files.ipynb
+++ b/protyping/auto-segmentation/sb/031-download-cache-files.ipynb
@@ -16,7 +16,12 @@
    "outputs": [],
    "source": [
     "import json\n",
-    "import pathlib"
+    "import pathlib\n",
+    "\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "from IPython import display"
    ]
   },
   {
@@ -39,7 +44,7 @@
    "outputs": [],
    "source": [
     "import pymedphys\n",
-    "from pymedphys.labs.autosegmentation import indexing, filtering"
+    "from pymedphys.labs.autosegmentation import indexing, filtering, pipeline, mask"
    ]
   },
   {
@@ -115,6 +120,15 @@
    "source": [
     "data_path_root = mappings_paths[0].parent.parent\n",
     "data_path_root"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hash_path = data_path_root.joinpath('mappings', 'hashes.json')"
    ]
   },
   {
@@ -247,14 +261,113 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "filtered_ct_uids = filtering.filter_ct_uids(\n",
+    "    structure_uid_to_ct_uids,\n",
+    "    structure_names_by_structure_set_uid,\n",
+    "    structure_names_by_ct_uid,\n",
+    "    **filters,\n",
+    ")"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# filtered_ct_uids"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset = pipeline.create_numpy_generator_dataset(    \n",
+    "    data_path_root,\n",
+    "    structure_set_paths,\n",
+    "    ct_image_paths,\n",
+    "    ct_uid_to_structure_uid,\n",
+    "    names_map,\n",
+    "    filtered_ct_uids,\n",
+    "    structures_to_learn,\n",
+    "    uid_to_url,\n",
+    "    hash_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def diagnostic_plotting(x_grid, y_grid, input_array, output_array):\n",
+    "    plt.figure(figsize=(15,10))\n",
+    "    \n",
+    "    x_grid = x_grid.numpy()\n",
+    "    y_grid = y_grid.numpy()\n",
+    "    input_array = input_array.numpy()[:,:,0]\n",
+    "    output_array = output_array.numpy()\n",
+    "    \n",
+    "    for i, structure in enumerate(structures_to_learn[0:-1]):\n",
+    "        if structure.endswith('left'):\n",
+    "            colour = 'r'\n",
+    "        elif structure.endswith('right'):\n",
+    "            colour = 'b'\n",
+    "        else:\n",
+    "            raise ValueError(\"Expected either left or right\")\n",
+    "            \n",
+    "        if structure.startswith('lens'):\n",
+    "            colour += '--'\n",
+    "        elif structure.startswith('eye'):\n",
+    "            colour += '-'\n",
+    "        else:\n",
+    "            raise ValueError(\"Expected either eye or lens\")\n",
+    "\n",
+    "        contours = mask.get_contours_from_mask(\n",
+    "            x_grid, y_grid, output_array[:,:,i])\n",
+    "        for contour in contours:\n",
+    "            plt.plot(*contour.T, colour)\n",
+    "            \n",
+    "    \n",
+    "    plt.axis('equal')\n",
+    "    ax = plt.gca()\n",
+    "    xlim = ax.get_xlim()\n",
+    "    ylim = ax.get_ylim()\n",
+    "    \n",
+    "    contours = mask.get_contours_from_mask(\n",
+    "        x_grid, y_grid, output_array[:,:,-1])\n",
+    "    for contour in contours:\n",
+    "        plt.plot(*contour.T, 'k--')\n",
+    "    \n",
+    "    windowed = np.copy(input_array)\n",
+    "\n",
+    "    vmin = 900\n",
+    "    vmax = 1200\n",
+    "    windowed[windowed<vmin] = vmin\n",
+    "    windowed[windowed>vmax] = vmax\n",
+    "\n",
+    "    plt.contourf(x_grid, y_grid, windowed, 50)\n",
+    "    plt.colorbar()\n",
+    "    ax.set_xlim(xlim)\n",
+    "    ax.set_ylim(ylim)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for ct_uid, x_grid, y_grid, input_array, output_array in dataset:    \n",
+    "    ct_uid = ct_uid.numpy().decode()\n",
+    "    \n",
+    "    display.display(display.Markdown(f\"## {ct_uid}\"))\n",
+    "    diagnostic_plotting(x_grid, y_grid, input_array, output_array)\n",
+    "    plt.show()"
+   ]
   },
   {
    "cell_type": "code",
