masking and downloading now happening in parallel
Former-commit-id: 4fb4666c94c863234e1e3ce8b935925b2b1879f2

--- a/protyping/auto-segmentation/sb/031-streaming-from-github-releases.ipynb
+++ b/protyping/auto-segmentation/sb/031-streaming-from-github-releases.ipynb
@@ -1,15 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## No need to run this notebook.\n",
-    "\n",
-    "It will take needlessly forever."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -17,6 +8,7 @@
    "source": [
     "import json\n",
     "import pathlib\n",
+    "import random\n",
     "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -78,13 +70,6 @@
     "    \n",
     "    return filename"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -276,8 +261,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# filtered_ct_uids"
+    "random.shuffle(filtered_ct_uids)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Add further filtering here to split dataset by training etc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -368,13 +369,6 @@
     "    diagnostic_plotting(x_grid, y_grid, input_array, output_array)\n",
     "    plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
