add expansion parameter
Former-commit-id: ee39e33238c937a3f2e4e9161985f9de366ea626

--- a/protyping/auto-segmentation/sb/033-add-expansion-parameter.ipynb
+++ b/protyping/auto-segmentation/sb/033-add-expansion-parameter.ipynb
@@ -45,6 +45,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "mask_expansion = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Create masks for the following structures, in the following order\n",
     "structures_to_learn = [\n",
     "    'lens_left', 'lens_right', 'eye_left', 'eye_right', 'patient']\n",
@@ -67,7 +76,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset_all, used_structure_uids = pipeline.create_dataset(structures_to_learn, filters)\n",
+    "dataset_all, used_structure_uids = pipeline.create_dataset(structures_to_learn, filters, expansion=mask_expansion)\n",
     "\n",
     "used_structure_uids = list(used_structure_uids)\n",
     "sorted(used_structure_uids)\n",
@@ -95,7 +104,7 @@
    "outputs": [],
    "source": [
     "testing, used_structure_uids = pipeline.create_dataset(\n",
-    "    structures_to_learn, filters, structure_uids=testing_uids)\n",
+    "    structures_to_learn, filters, structure_uids=testing_uids, expansion=mask_expansion)\n",
     "\n",
     "assert set(used_structure_uids) == set(testing_uids)"
    ]
@@ -107,7 +116,7 @@
    "outputs": [],
    "source": [
     "validation, used_structure_uids = pipeline.create_dataset(\n",
-    "    structures_to_learn, filters, structure_uids=validation_uids)\n",
+    "    structures_to_learn, filters, structure_uids=validation_uids, expansion=mask_expansion)\n",
     "\n",
     "assert set(used_structure_uids) == set(validation_uids)"
    ]
@@ -119,7 +128,7 @@
    "outputs": [],
    "source": [
     "training, used_structure_uids = pipeline.create_dataset(\n",
-    "    structures_to_learn, filters, structure_uids=training_uids)\n",
+    "    structures_to_learn, filters, structure_uids=training_uids, expansion=mask_expansion)\n",
     "\n",
     "assert set(used_structure_uids) == set(training_uids)"
    ]
