--- a/protyping/auto-segmentation/sb/034-filter-by-ct-uid.ipynb
+++ b/protyping/auto-segmentation/sb/034-filter-by-ct-uid.ipynb
@@ -22,6 +22,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import tensorflow as tf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Makes it so any changes in pymedphys is automatically\n",
     "# propagated into the notebook without needing a kernel reset.\n",
     "from IPython.lib.deepreload import reload\n",
@@ -36,7 +45,7 @@
    "outputs": [],
    "source": [
     "import pymedphys\n",
-    "from pymedphys.labs.autosegmentation import indexing, filtering, pipeline, mask"
+    "from pymedphys._experimental.autosegmentation import indexing, filtering, pipeline, mask"
    ]
   },
   {
@@ -86,11 +95,10 @@
    "outputs": [],
    "source": [
     "testing_uids = structure_uids[0:2]\n",
-    "print(testing_uids)\n",
     "validation_uids = structure_uids[2:5]\n",
-    "print(validation_uids)\n",
     "training_uids = structure_uids[5::]\n",
-    "print(training_uids)"
+    "\n",
+    "print(testing_uids)"
    ]
   },
   {
@@ -128,6 +136,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# NOTE TensorFlow is not yet installed as part of requirements\n",
+    "\n",
     "testing = pipeline.create_dataset(\n",
     "    testing_ct_uids, structures_to_learn, expansion=mask_expansion)\n",
     "\n",
@@ -209,13 +219,20 @@
     "    diagnostic_plotting(x_grid, y_grid, input_array, output_array)\n",
     "    plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pymedphys-master",
+   "display_name": "pymedphys",
    "language": "python",
-   "name": "pymedphys-master"
+   "name": "pymedphys"
   },
   "language_info": {
    "codemirror_mode": {
@@ -227,7 +244,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
