--- a/protyping/toy-cnn/003-flax.ipynb
+++ b/protyping/toy-cnn/003-flax.ipynb
@@ -45,6 +45,41 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "class CNN(flax.nn.Module):\n",
     "    def apply(self, x):\n",
@@ -144,8 +179,10 @@
    "outputs": [],
    "source": [
     "_, initial_params = CNN.init_by_shape(\n",
-    "jax.random.PRNGKey(0),\n",
-    "    [((1, 28, 28, 1), jnp.float32)])\n",
+    "    jax.random.PRNGKey(0),\n",
+    "    [((1, 28, 28, 1), jnp.float32)]\n",
+    ")\n",
+    "\n",
     "model = flax.nn.Model(CNN, initial_params)\n",
     "\n",
     "optimizer = flax.optim.Momentum(\n",
