--- a/protyping/auto-segmentation/creating_rs_file.ipynb
+++ b/protyping/auto-segmentation/creating_rs_file.ipynb
@@ -240,6 +240,22 @@
     "rtroi_observations1.ROIInterpreter = ''\n",
     "rtroi_observations_sequence.append(rtroi_observations1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for x in ds: print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -258,7 +274,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
