add in wlutz stats
Former-commit-id: d5e7d972126fa50a97487b717a84cea98e78e263

--- a/site-specific/cancer-care-associates/production/Winston Lutz/Arc Method/Arc Analysis.ipynb
+++ b/site-specific/cancer-care-associates/production/Winston Lutz/Arc Method/Arc Analysis.ipynb
@@ -44,7 +44,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "working_dir = pathlib.Path(r\"\\\\pdc\\OneDrive$\\RCCC Specific Files\\Linac Beam Data Record\\Synergy 2619\\QA\\20200617_wlutz\")\n",
+    "working_dir = pathlib.Path(r\"\\\\pdc\\OneDrive$\\RCCC Specific Files\\Linac Beam Data Record\\Synergy 2694\\QA\\20200712_monthly\\WLutz\")\n",
     "output_dir = working_dir.joinpath('results')\n",
     "output_dir.mkdir(exist_ok=True)"
    ]
@@ -935,15 +935,255 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "energies = ['06MV', '10MV', '06FFF', '10FFF']\n",
+    "energies = ['06MV', '10MV', '06FFF']\n",
     "axes = ['x', 'y']\n",
     "\n",
+    "dose_rate_ranges = {\n",
+    "    \"06MV\": {\n",
+    "        \"low\": (0, 200),\n",
+    "        \"half\": (200, 400),\n",
+    "        \"full\": (400, 700)\n",
+    "    },\n",
+    "    \"10MV\": {\n",
+    "        \"low\": (0, 200),\n",
+    "        \"half\": (200, 400),\n",
+    "        \"full\": (400, 700)\n",
+    "    },\n",
+    "    \"06FFF\": {\n",
+    "        \"low\": (0, 500),\n",
+    "        \"half\": (500, 1100),\n",
+    "        \"full\": (1100, 2000)\n",
+    "    },\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_energy_and_dose_rate_label_from_key(key):\n",
+    "    split_key = key[0].split('_')\n",
+    "    energy = split_key[1]\n",
+    "    \n",
+    "    dose_rate = int(split_key[-1].replace('DR', ''))\n",
+    "    ranges = dose_rate_ranges[energy]\n",
+    "    \n",
+    "    dose_rate_label = None\n",
+    "    for label, dose_rates in ranges.items():\n",
+    "        if dose_rate >= dose_rates[0] and dose_rate < dose_rates[1]:\n",
+    "            dose_rate_label = label\n",
+    "            break\n",
+    "            \n",
+    "    return energy, dose_rate_label"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_key_to_stat_key = {\n",
+    "    key: get_energy_and_dose_rate_label_from_key(key)\n",
+    "    for key in dataframes.keys()\n",
+    "}\n",
+    "\n",
+    "# energy_and_dose_rate_labels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_key_to_stat_key.values()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stat_key_to_df_key = {}\n",
+    "\n",
+    "for stat_key in set(df_key_to_stat_key.values()):    \n",
+    "    stat_key_to_df_key[stat_key] = [\n",
+    "        df_key for df_key in df_keys if df_key_to_stat_key[df_key] == stat_key\n",
+    "    ]\n",
+    "    \n",
+    "# stat_key_to_df_key"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "statistics = {}\n",
+    "\n",
+    "for stat_key, df_keys in stat_key_to_df_key.items():\n",
+    "    x_panel_data = []\n",
+    "    y_panel_data = []\n",
+    "    \n",
+    "    for df_key in df_keys:\n",
+    "        x_panel_data += dataframes[df_key]['Field - BB x (mm)'].values.tolist()\n",
+    "        y_panel_data += dataframes[df_key]['Field - BB y (mm)'].values.tolist()\n",
+    "        \n",
+    "    statistics[stat_key] = {\n",
+    "        \"x\": {\n",
+    "            \"min\": np.nanmin(x_panel_data).round(2),\n",
+    "            \"mean\": np.nanmean(x_panel_data).round(2),\n",
+    "            \"max\": np.nanmax(x_panel_data).round(2),\n",
+    "        },\n",
+    "        \"y\": {\n",
+    "            \"min\": np.nanmin(y_panel_data).round(2),\n",
+    "            \"mean\": np.nanmean(y_panel_data).round(2),\n",
+    "            \"max\": np.nanmax(y_panel_data).round(2),\n",
+    "        }\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# del statistics[('06FFF', 'low')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "statistics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stat_columns = [\n",
+    "    'Full DR | min', 'Full DR | mean', 'Full DR | max', \n",
+    "    'Half DR | min', 'Half DR | mean', 'Half DR | max', \n",
+    "    'Low DR | min', 'Low DR | mean', 'Low DR | max'\n",
+    "]\n",
+    "\n",
+    "stat_index = [\n",
+    "    '06MV | x', '06MV | y',\n",
+    "    '10MV | x', '10MV | y',\n",
+    "    '06FFF | x', '06FFF | y',\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "table = []\n",
+    "\n",
+    "for beam in energies:\n",
+    "    for axis in ['x', 'y']:\n",
+    "        current_row = []\n",
+    "        for label in ['full', 'half', 'low']:\n",
+    "            for stat in ['min', 'mean', 'max']:\n",
+    "                try:\n",
+    "                    current_row.append(statistics[(beam, label)][axis][stat])\n",
+    "                except KeyError:\n",
+    "                    current_row.append(np.nan)\n",
+    "        table.append(current_row)\n",
+    "        \n",
+    "table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "statistics_table = pd.DataFrame(data=table, columns=stat_columns, index=stat_index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "statistics_table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Can select and copy the following table and use \"paste special > text\" to put into Excel\n",
+    "\n",
+    "statistics_table.index = ['x (mm)', 'y (mm)']*3\n",
+    "statistics_table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "for energy in energies:\n",
     "    for axis in axes:\n",
     "        plot_enery_axis(energy, axis, dataframes)\n",
     "        \n",
     "        plt.savefig(output_dir.joinpath(f\"{energy}_{axis}-axis.png\"))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
