--- a/protyping/auto-segmentation/sb/02-before-api-change/033-add-expansion-parameter.ipynb
+++ b/protyping/auto-segmentation/sb/02-before-api-change/033-add-expansion-parameter.ipynb
@@ -22,15 +22,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import tensorflow as tf"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# Makes it so any changes in pymedphys is automatically\n",
     "# propagated into the notebook without needing a kernel reset.\n",
     "from IPython.lib.deepreload import reload\n",
@@ -85,7 +76,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "structure_uids, ct_uids = pipeline.get_filtered_uids(filters)"
+    "dataset_all, used_structure_uids = pipeline.create_dataset(structures_to_learn, filters, expansion=mask_expansion)\n",
+    "\n",
+    "used_structure_uids = list(used_structure_uids)\n",
+    "sorted(used_structure_uids)\n",
+    "used_structure_uids"
    ]
   },
   {
@@ -94,11 +89,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "testing_uids = structure_uids[0:2]\n",
-    "validation_uids = structure_uids[2:5]\n",
-    "training_uids = structure_uids[5::]\n",
-    "\n",
-    "print(testing_uids)"
+    "testing_uids = used_structure_uids[0:2]\n",
+    "print(testing_uids)\n",
+    "validation_uids = used_structure_uids[2:5]\n",
+    "print(validation_uids)\n",
+    "training_uids = used_structure_uids[5::]\n",
+    "print(training_uids)"
    ]
   },
   {
@@ -107,8 +103,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def filter_out_ct_uids(orignal_ct_uid_list, to_be_removed):\n",
-    "    return [item for item in orignal_ct_uid_list if not item in to_be_removed]"
+    "testing, used_structure_uids = pipeline.create_dataset(\n",
+    "    structures_to_learn, filters, structure_uids=testing_uids, expansion=mask_expansion)\n",
+    "\n",
+    "assert set(used_structure_uids) == set(testing_uids)"
    ]
   },
   {
@@ -117,17 +115,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "_, testing_ct_uids = pipeline.get_filtered_uids(filters, structure_uids=structure_uids[0:2])\n",
-    "_, validation_ct_uids = pipeline.get_filtered_uids(filters, structure_uids=structure_uids[2:5])\n",
-    "_, training_ct_uids = pipeline.get_filtered_uids(filters, structure_uids=structure_uids[5::])\n",
+    "validation, used_structure_uids = pipeline.create_dataset(\n",
+    "    structures_to_learn, filters, structure_uids=validation_uids, expansion=mask_expansion)\n",
     "\n",
-    "# Adjust the following for further removal of CT UIDs (data cleaning)\n",
-    "ct_uids_for_removal = ['1.2.840.113704.1.111.2288.1561526844.18195', '1.2.840.113704.1.111.2288.1561527104.18456']\n",
-    "# ct_uids_for_removal = []\n",
-    "\n",
-    "testing_ct_uids = filter_out_ct_uids(testing_ct_uids, ct_uids_for_removal)\n",
-    "validation_ct_uids = filter_out_ct_uids(validation_ct_uids, ct_uids_for_removal)\n",
-    "training_ct_uids = filter_out_ct_uids(training_ct_uids, ct_uids_for_removal)"
+    "assert set(used_structure_uids) == set(validation_uids)"
    ]
   },
   {
@@ -136,16 +127,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# NOTE TensorFlow is not yet installed as part of requirements\n",
+    "training, used_structure_uids = pipeline.create_dataset(\n",
+    "    structures_to_learn, filters, structure_uids=training_uids, expansion=mask_expansion)\n",
     "\n",
-    "testing = pipeline.create_dataset(\n",
-    "    testing_ct_uids, structures_to_learn, expansion=mask_expansion)\n",
-    "\n",
-    "validation = pipeline.create_dataset(\n",
-    "    validation_ct_uids, structures_to_learn, expansion=mask_expansion)\n",
-    "\n",
-    "training = pipeline.create_dataset(\n",
-    "    training_ct_uids, structures_to_learn, expansion=mask_expansion)"
+    "assert set(used_structure_uids) == set(training_uids)"
    ]
   },
   {
@@ -219,13 +204,6 @@
     "    diagnostic_plotting(x_grid, y_grid, input_array, output_array)\n",
     "    plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
