--- a/protyping/auto-segmentation/sb/035-compare-expansion-effects.ipynb
+++ b/protyping/auto-segmentation/sb/035-compare-expansion-effects.ipynb
@@ -22,6 +22,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import tensorflow as tf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Makes it so any changes in pymedphys is automatically\n",
     "# propagated into the notebook without needing a kernel reset.\n",
     "from IPython.lib.deepreload import reload\n",
@@ -36,7 +45,7 @@
    "outputs": [],
    "source": [
     "import pymedphys\n",
-    "from pymedphys.labs.autosegmentation import indexing, filtering, pipeline, mask"
+    "from pymedphys._experimental.autosegmentation import indexing, filtering, pipeline, mask"
    ]
   },
   {
@@ -45,7 +54,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mask_expansion = 1"
+    "pymedphys.__version__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ct_uid_to_use = '1.2.840.113704.1.111.3096.1537312918.112198'"
    ]
   },
   {
@@ -76,61 +94,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset_all, used_structure_uids = pipeline.create_dataset(structures_to_learn, filters, expansion=mask_expansion)\n",
+    "binary_mask_dataset = pipeline.create_dataset(\n",
+    "    [ct_uid_to_use], structures_to_learn, expansion=1)\n",
     "\n",
-    "used_structure_uids = list(used_structure_uids)\n",
-    "sorted(used_structure_uids)\n",
-    "used_structure_uids"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "testing_uids = used_structure_uids[0:2]\n",
-    "print(testing_uids)\n",
-    "validation_uids = used_structure_uids[2:5]\n",
-    "print(validation_uids)\n",
-    "training_uids = used_structure_uids[5::]\n",
-    "print(training_uids)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "testing, used_structure_uids = pipeline.create_dataset(\n",
-    "    structures_to_learn, filters, structure_uids=testing_uids, expansion=mask_expansion)\n",
-    "\n",
-    "assert set(used_structure_uids) == set(testing_uids)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "validation, used_structure_uids = pipeline.create_dataset(\n",
-    "    structures_to_learn, filters, structure_uids=validation_uids, expansion=mask_expansion)\n",
-    "\n",
-    "assert set(used_structure_uids) == set(validation_uids)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "training, used_structure_uids = pipeline.create_dataset(\n",
-    "    structures_to_learn, filters, structure_uids=training_uids, expansion=mask_expansion)\n",
-    "\n",
-    "assert set(used_structure_uids) == set(training_uids)"
+    "floating_point_edge_dataset = pipeline.create_dataset(\n",
+    "    [ct_uid_to_use], structures_to_learn, expansion=5)"
    ]
   },
   {
@@ -197,7 +165,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for ct_uid, x_grid, y_grid, input_array, output_array in training:    \n",
+    "for ct_uid, x_grid, y_grid, input_array, output_array in binary_mask_dataset:    \n",
+    "    ct_uid = ct_uid.numpy().decode()\n",
+    "    \n",
+    "    display.display(display.Markdown(f\"## {ct_uid}\"))\n",
+    "    diagnostic_plotting(x_grid, y_grid, input_array, output_array)\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for ct_uid, x_grid, y_grid, input_array, output_array in floating_point_edge_dataset:    \n",
     "    ct_uid = ct_uid.numpy().decode()\n",
     "    \n",
     "    display.display(display.Markdown(f\"## {ct_uid}\"))\n",
