install pymedphys and pydicom for colab

--- a/protyping/auto-segmentation/sb/035-compare-expansion-effects.ipynb
+++ b/protyping/auto-segmentation/sb/035-compare-expansion-effects.ipynb
@@ -44,8 +44,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pymedphys\n",
-    "from pymedphys._experimental.autosegmentation import indexing, filtering, pipeline, mask"
+    "!pip install \"pymedphys>=0.31.0\" --no-deps\n",
+    "!pip install \"pydicom>=2\""
    ]
   },
   {
@@ -54,7 +54,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pymedphys.__version__"
+    "import pymedphys\n",
+    "from pymedphys._experimental.autosegmentation import indexing, filtering, pipeline, mask"
    ]
   },
   {
