--- a/protyping/auto-segmentation/sb/035-compare-expansion-effects.ipynb
+++ b/protyping/auto-segmentation/sb/035-compare-expansion-effects.ipynb
@@ -161,6 +161,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Contours produced from binary masks"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -172,6 +179,13 @@
     "    display.display(display.Markdown(f\"## {ct_uid}\"))\n",
     "    diagnostic_plotting(x_grid, y_grid, input_array, output_array)\n",
     "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Contours produced where the edge pixel is able to be a floating point"
    ]
   },
   {
