--- a/protyping/auto-segmentation/sb/035-compare-expansion-effects.ipynb
+++ b/protyping/auto-segmentation/sb/035-compare-expansion-effects.ipynb
@@ -185,7 +185,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Contours produced where the edge pixel is able to be a floating point"
+    "## Contours produced where the edge pixel of a mask is able to be a floating point"
    ]
   },
   {
