move dosecheck notebooks, update arcs
Former-commit-id: 47d890e046c504871c5ecae17376e2c5766648d3

--- a/site-specific/cancer-care-associates/production/Winston Lutz/Arc Method/Arc Analysis.ipynb
+++ b/site-specific/cancer-care-associates/production/Winston Lutz/Arc Method/Arc Analysis.ipynb
@@ -44,7 +44,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "working_dir = pathlib.Path(r\"\\\\pdc\\OneDrive$\\RCCC Specific Files\\Linac Beam Data Record\\Synergy 2694\\QA\\20200712_monthly\\WLutz\")\n",
+    "working_dir = pathlib.Path(r\"\\\\pdc\\OneDrive$\\RCCC Specific Files\\Linac Beam Data Record\\Synergy 2694\\QA\\20200807_unstable_6FFF_investigation\\wlutz\")\n",
     "output_dir = working_dir.joinpath('results')\n",
     "output_dir.mkdir(exist_ok=True)"
    ]
@@ -989,6 +989,8 @@
     "    key: get_energy_and_dose_rate_label_from_key(key)\n",
     "    for key in dataframes.keys()\n",
     "}\n",
+    "\n",
+    "df_keys = df_key_to_stat_key.keys()\n",
     "\n",
     "# energy_and_dose_rate_labels"
    ]
