--- a/protyping/auto-segmentation/sb/036-segments-ai.ipynb
+++ b/protyping/auto-segmentation/sb/036-segments-ai.ipynb
@@ -9,8 +9,15 @@
     "import keyring\n",
     "import getpass\n",
     "import functools\n",
+    "import itertools\n",
+    "import tempfile\n",
+    "import io\n",
     "\n",
     "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "import imageio\n",
+    "import skimage.transform\n",
     "\n",
     "import pydicom\n",
     "\n",
@@ -45,7 +52,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if not keyring.get_password('segments-ai', 'api-key'):\n",
+    "segments_api_key = keyring.get_password('segments-ai', 'api-key')\n",
+    "\n",
+    "if not segments_api_key:\n",
     "    segments_api_key = getpass.getpass()\n",
     "    keyring.set_password('segments-ai', 'api-key', segments_api_key)"
    ]
@@ -56,7 +65,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if not keyring.get_password('github', 'api-key'):\n",
+    "segments_api_key"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "github_api_key = keyring.get_password('github', 'api-key')\n",
+    "\n",
+    "if not github_api_key:\n",
     "    github_api_key = getpass.getpass()\n",
     "    keyring.set_password('github', 'api-key', github_api_key)"
    ]
@@ -68,16 +88,6 @@
    "outputs": [],
    "source": [
     "ct_uid = '1.2.840.113704.1.111.3096.1537312918.112198'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "structures_to_learn = [\n",
-    "    'lens_left', 'lens_right', 'eye_left', 'eye_right', 'patient']"
    ]
   },
   {
@@ -99,6 +109,36 @@
     "    hash_path,\n",
     ") = pipeline.get_dataset_metadata()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# uid_to_url"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -220,10 +260,18 @@
    "outputs": [],
    "source": [
     "contours_on_this_slice = contours_by_ct_uid[ct_uid].keys()\n",
-    "\n",
+    "contours_on_this_slice"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "masks = dict()\n",
     "\n",
-    "for structure in structures_to_learn:\n",
+    "for structure in contours_on_this_slice:\n",
     "    if structure in contours_on_this_slice:\n",
     "        masks[structure] = mask.calculate_expanded_mask(\n",
     "            contours_by_ct_uid[ct_uid][structure],\n",
@@ -239,7 +287,283 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "masks"
+    "plt.pcolormesh(masks['patient'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.pcolormesh(masks['brain'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def is_mask_a_subset(subset, superset):\n",
+    "    return np.all(np.logical_and(subset, superset) == subset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cmp(x, y):\n",
+    "    mask_x = masks[x]\n",
+    "    mask_y = masks[y]\n",
+    "    \n",
+    "    if is_mask_a_subset(mask_x, mask_y):\n",
+    "        return -1\n",
+    "    if is_mask_a_subset(mask_y, mask_x):\n",
+    "        return 1\n",
+    "    \n",
+    "    disjoint = np.logical_xor(mask_x, mask_y) == np.logical_or(mask_x, mask_y)\n",
+    "    \n",
+    "    if np.any(np.invert(disjoint)):\n",
+    "        raise ValueError(f\"Masks ({x}, {y}) are disjoint\")\n",
+    "\n",
+    "    \n",
+    "    return 0\n",
+    "\n",
+    "sorting_key = functools.cmp_to_key(cmp)\n",
+    "\n",
+    "sorted(list(contours_on_this_slice), key=sorting_key)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "names = list(set(names_map.values()))\n",
+    "names.remove(None)\n",
+    "\n",
+    "names.sort()\n",
+    "\n",
+    "def get_ids(structure_name):\n",
+    "    index = names.index(structure_name)\n",
+    "    instance_id = index + 1\n",
+    "    category_id = instance_id + 1\n",
+    "    \n",
+    "    return instance_id, category_id"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dcm_ct"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "HU = dcm_ct.pixel_array * dcm_ct.RescaleSlope + dcm_ct.RescaleIntercept"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.min(HU)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.max(HU)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "2048"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "expanded = skimage.transform.resize(HU, ct_size, mode='edge', preserve_range=True, anti_aliasing=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "uint16_image = ((expanded + 1024) / 4096 * 2**16).astype(np.uint16)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(20,20))\n",
+    "plt.imshow(uint16_image)\n",
+    "plt.axis('equal')\n",
+    "plt.colorbar()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "png_file = io.BytesIO()\n",
+    "\n",
+    "imageio.imsave(png_file, uint16_image, format='png', prefer_uint8=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set up the client\n",
+    "client = segments.SegmentsClient(segments_api_key)\n",
+    "dataset_name = 'SimonBiggs/AnimalContours' # Name of a dataset you've created on Segments.ai\n",
+    "\n",
+    "sample_name = f\"{ct_uid}.png\"\n",
+    "\n",
+    "asset = client.upload_asset(png_file, filename=sample_name)\n",
+    "image_url = asset[\"url\"]\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# sample_name = f\"{ct_uid}.png\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image_url"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "attributes = {\n",
+    "    \"image\": { \"url\": image_url }\n",
+    "}\n",
+    "result = client.add_sample(dataset_name, sample_name, attributes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "expanded"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dcm_ct.pixel_array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dcm_ct.pixel_array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "asset = client.upload_asset(file, filename=\"violet.jpg\")\n",
+    "image_url = asset[\"url\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "# Upload the images to Segments.ai\n",
+    "for i, url in enumerate(image_urls):\n",
+    "    sample_name = 'image_{:05}.jpg'.format(i)\n",
+    "    attributes = {\n",
+    "        \"image\": { \"url\": url }\n",
+    "    }\n",
+    "    result = client.add_sample(dataset_name, sample_name, attributes)"
    ]
   },
   {
@@ -304,6 +628,118 @@
     "#     },\n",
     "# )).read().decode())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# masks['bite_block'][:, 1000:1010] = True\n",
+    "\n",
+    "# plt.pcolormesh(masks['bite_block'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mask_a = masks['eye_left']\n",
+    "mask_b = masks['brain']\n",
+    "\n",
+    "disjoint = np.logical_xor(mask_a, mask_b) == np.logical_or(mask_a, mask_b)\n",
+    "np.any(np.invert(disjoint))\n",
+    "# plt.pcolormesh()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for contour_labels in itertools.permutations(contours_on_this_slice, 2):\n",
+    "    print(contour_labels)\n",
+    "    \n",
+    "    mask_a = masks[contour_labels[0]]\n",
+    "    mask_b = masks[contour_labels[1]]\n",
+    "    \n",
+    "    disjoint = np.logical_xor(\n",
+    "        np.logical_xor(mask_a, mask_b),\n",
+    "        np.logical_or(mask_a, mask_b)\n",
+    "    )\n",
+    "    \n",
+    "    print(np.any(disjoint))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.all(np.logical_and(masks['brain'], masks['patient']) == masks['brain'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "masks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
